# aic

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml  test.yml
src/: cli.rs  commands.rs  config.rs  git.rs  llm.rs  main.rs  ui.rs
