[package]
name = "aic"
version = "0.1.0"
edition = "2021"
description = "AI-powered commit message generation CLI tool"
authors = ["Mathew Shen <datahonor@gmail.com>"]
repository = "https://github.com/shenxiangzhuang/aic"
readme = "README.md"
license = "MIT"
keywords = ["AI", "LLM", "Git", "Commit"]


[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
chrono = "0.4.40"
tempfile = "3.19.1"
colored = "3.0.0"
uuid = { version = "1.7", features = ["v4"] }
prettytable-rs = "0.10"
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json"] }

[dev-dependencies]
wiremock = "0.6.3"


[profile.release]
lto = true
strip = true
opt-level = "z"
